--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <h1>600 CÂU HỎI SÁT HẠCH LÁI XE CƠ GIỚI ĐƯỜNG BỘ - 2025 - BỘ CÔNG AN </h1>
             <h4>“Phía trước tay lái là cuộc sống của bạn và mọi người, phía sau tay lái là gia đình của bạn”
                 <p style="color: #b30000;">
-                    <a href="https://taylaimoi.com/" style="color: #e60000; target="_blank"">Taylaimoi.com</a> &
-                    <a href="https://120mophong.com" style=" color: #e60000; target="_blank"">120mophong.com</a></p>
+                    <a href="https://taylaimoi.com/" style="color: #e60000; target="_blank">Taylaimoi.com</a> &
+                    <a href="https://120mophong.com" style=" color: #e60000; target="_blank">120mophong.com</a></p>
                 <p>Cách lái mới, cho thời đại mới</p>
             </h4>
 
