--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
                     <img src="logo.png" alt="Logo Taylaimoi.com" class="logo-img"></a>
             </div>
             <div class="contact">
-                <span>📞 0989.465.167 <strong>(E.Tuấn) - Nhận hồ sơ</strong></span>
-                <span> 📧Taylaimoi226@gmail.com </span>
+                <span>📞 <a href="tel:0989465167">0989.465.167</a> - <strong>Thầy Tuấn - Tiếp nhận đăng ký hồ sơ</strong></span>
+                <span>📞 <a href="tel:0988882266">0988.882.266</a> - <strong>Hotline Taylaimoi.com</strong></span>
+                <span>📧 <a href="mailto:Taylaimoi226@gmail.com">Taylaimoi226@gmail.com</a> </span>
                 <span>📍 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</span>
             </div>
         </div>
@@ -33,12 +34,15 @@
     <main class="container">
         <section class="intro">
             <h1>600 CÂU HỎI SÁT HẠCH LÁI XE CƠ GIỚI ĐƯỜNG BỘ - 2025 - BỘ CÔNG AN </h1>
-            <h4>“Phía trước tay lái là cuộc sống của bạn và mọi người, phía sau tay lái là gia đình của bạn”
-                <p style="color: #b30000;">
-                    <a href="https://taylaimoi.com/" style="color: #e60000; target="_blank">Taylaimoi.com</a> &
-                    <a href="https://120mophong.com" style=" color: #e60000; target="_blank">120mophong.com</a></p>
+            <div>
                 <p>Cách lái mới, cho thời đại mới</p>
-            </h4>
+                <p>
+                    <a href="https://taylaimoi.com/" target=" _blank ">Taylaimoi.com</a> &
+                    <a href="https://120mophong.com " target="_blank">120mophong.com</a>
+                </p>
+                <h4>“Phía trước tay lái là cuộc sống của bạn và mọi người, phía sau tay lái là gia đình của bạn”</h4>
+
+            </div>
 
             <p>
                 Bộ đề thi sát hạch lái xe cơ giới đường bộ mới nhất được Bộ Công An ban hành, bao gồm 600 câu hỏi và 120 tình huống mô phỏng. Bộ đề này được áp dụng từ ngày 1/6/2025, thay thế cho bộ đề cũ, nhằm nâng cao chất lượng đào tạo và sát hạch lái xe.
