Update html & Css

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
 
     <header class="top-bar modern-marquee">
-        <div class="marquee-content"> Mọi thông tin cần tìm hiểu về dịch vụ dạy lái xe trên công nghệ giả lập và bổ túc tay lái mới xin quý khách vui lòng liên hệ hotline: 0988882266.xin chân thành cảm ơn! "Phía trước tay lái là cuộc sống của bạn và mọi người, phía sau tay lái là
-            gia đình của bạn" 120mophong.com & Taylaimoi.com </p>
+        <div class="marquee-content">
+            <p>Mọi thông tin cần tìm hiểu về dịch vụ dạy lái xe trên công nghệ giả lập và bổ túc tay lái mới xin quý khách vui lòng liên hệ hotline: 09.8888.2266.
+                <span class="blink">💥 Taylaimoi.com - 120mophong.com 💥</span>
+                <span>Xin chân thành cảm ơn! "Phía trước tay lái là cuộc sống của bạn và mọi người, phía sau tay lái là gia đình của bạn" 💥120mophong.com & Taylaimoi.com 💥</span></p>
             <!-- <p>Thông tin hỗ trợ: <strong>0988882266</strong> | Email: Taylaimoi226@gmail.com</p> -->
     </header>
 
