--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <button class="practice-btn" data-chapter="600"><a href="https://forms.gle/K5euZPoN4uqPpknD7" target="_blank">➜ Luyện tập ngay 600 câu</a></button>
                 </div>
                 <div class="tab-panel" id="tab1">
-                    <button class="practice-btn" data-chapter="1"><a href="https://forms.gle/K5euZPoN4uqPpknD7" target="_blank">➜ Luyện ôn ngay chương 1</a></button>
+                    <button class="practice-btn" data-chapter="1"><a href="https://forms.gle/nntHB2YNQY949Wk47" target="_blank">➜ Luyện ôn ngay chương 1</a></button>
                 </div>
                 <div class="tab-panel" id="tab2">
                     <button class="practice-btn" data-chapter="2"><a href="https://forms.gle/K5euZPoN4uqPpknD7"target="_blank">➜ Luyện ôn ngay chương 2</a></button>
