Update html,css, favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>600 Câu Hỏi Sát Hạch Lái Xe 2025</title>
+    <link rel="icon" type="image/x-icon" href="favicon-16x16.png">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -66,6 +67,7 @@
 
         <section class="practice-section">
             <h3>CHỌN PHẦN CHƯƠNG BẠN MUỐN ÔN LUYỆN</h3>
+            <p>Và bấm nút bên dưới <i style="color: brown;">"Luyện tập ngay"</i> để bắt đầu ôn luyện</p>
             <div class="tab-group">
                 <div class="tab-list" role="tablist">
                     <button role="tab" class="tab active" data-tab="tab600">600 câu</button>
@@ -82,22 +84,22 @@
                     <button class="practice-btn" data-chapter="600"><a href="https://forms.gle/K5euZPoN4uqPpknD7" target="_blank">➜ Luyện tập ngay 600 câu</a></button>
                 </div>
                 <div class="tab-panel" id="tab1">
-                    <button class="practice-btn" data-chapter="1"><a href="https://forms.gle/nntHB2YNQY949Wk47" target="_blank">➜ Luyện ôn ngay chương 1</a></button>
+                    <button class="practice-btn" data-chapter="1"><a href="https://forms.gle/29K4nkdBUKLXrTeNA" target="_blank">➜ Luyện ôn ngay chương 1</a></button>
                 </div>
                 <div class="tab-panel" id="tab2">
-                    <button class="practice-btn" data-chapter="2"><a href="https://forms.gle/K5euZPoN4uqPpknD7"target="_blank">➜ Luyện ôn ngay chương 2</a></button>
+                    <button class="practice-btn" data-chapter="2"><a href="https://forms.gle/eouyCsV8TV2mw944A"target="_blank">➜ Luyện ôn ngay chương 2</a></button>
                 </div>
                 <div class="tab-panel" id="tab3">
-                    <button class="practice-btn" data-chapter="3"><a href="https://forms.gle/K5euZPoN4uqPpknD7"target="_blank">➜ Luyện ôn ngay chương 3</a></button>
+                    <button class="practice-btn" data-chapter="3"><a href="https://forms.gle/2ByK9qbsqAPb2QfLA"target="_blank">➜ Luyện ôn ngay chương 3</a></button>
                 </div>
                 <div class="tab-panel" id="tab4">
-                    <button class="practice-btn" data-chapter="4"><a href="https://forms.gle/K5euZPoN4uqPpknD7"target="_blank">➜ Luyện ôn ngay chương 4</a></button>
+                    <button class="practice-btn" data-chapter="4"><a href="https://forms.gle/jTy8AJkDyS7M9w2b8"target="_blank">➜ Luyện ôn ngay chương 4</a></button>
                 </div>
                 <div class="tab-panel" id="tab5">
-                    <button class="practice-btn" data-chapter="5"><a href="https://forms.gle/K5euZPoN4uqPpknD7"target="_blank">➜ Luyện ôn ngay chương 5</a></button>
+                    <button class="practice-btn" data-chapter="5"><a href="https://forms.gle/xwwNDfGfygX5SMh47"target="_blank">➜ Luyện ôn ngay chương 5</a></button>
                 </div>
                 <div class="tab-panel" id="tab6">
-                    <button class="practice-btn" data-chapter="6"><a href="https://forms.gle/K5euZPoN4uqPpknD7"target="_blank">➜ Luyện ôn ngay chương 6</a></button>
+                    <button class="practice-btn" data-chapter="6"><a href="https://forms.gle/J46RZe9ivbSvd6Fg9"target="_blank">➜ Luyện ôn ngay chương 6</a></button>
                 </div>
             </div>
         </section>
