--- a/Galery.html
+++ b/Galery.html
@@ -149,13 +149,13 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <a href="#">
+                <a href="index.html">
                     <img src="logo.png" alt="Logo Taylaimoi.com" class="logo-img"></a>
             </div>
             <div class="contact">
                 <span>📞 <a href="tel:0989465167">0989.465.167</a> - <strong>Thầy Tuấn - Tiếp nhận đăng ký hồ sơ</strong></span>
                 <span>📞 <a href="tel:0988882266">09.8888.2266</a> - <strong>Hotline Taylaimoi.com</strong></span>
-                <span>📧 <a href="mailto:Taylaimoi226@gmail.com">Taylaimoi226@gmail.com</a> </span>
+                <span>📧 <a href="mailto:Taylaimoi226@gmail.com">Taylaimoi2266@gmail.com</a> </span>
                 <span>📍 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</span>
             </div>
         </div>
@@ -173,7 +173,7 @@
         <div class="footer-content">
             <p><strong>www.Taylaimoi.com</strong></p>
             <p>Địa chỉ: 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</p>
-            <p>Hotline: 09.8888.2266 | Email: Taylaimoi226@gmail.com</p>
+            <p>Hotline: 09.8888.2266 | Email: Taylaimoi2266@gmail.com</p>
         </div>
     </footer>
 
