Update html & css

--- a/index.html
+++ b/index.html
@@ -56,6 +56,46 @@
 
         <section class="practice-class">
             <h3>LUYỆN THI THEO LOẠI GIẤY PHÉP</h3>
+            <section class="exam-table">
+                <h3>Bảng Cấu Trúc Đề Thi Sát Hạch</h3>
+                <div class="table-wrapper">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Nội dung</th>
+                                <th>Hạng B</th>
+                                <th>Hạng C1</th>
+                                <th>Hạng C</th>
+                                <th>Hạng D1, D2, D</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Số câu hỏi trắc nghiệm</td>
+                                <td>30</td>
+                                <td>35</td>
+                                <td>40</td>
+                                <td>45</td>
+                            </tr>
+                            <tr>
+                                <td>Thời gian làm bài (phút)</td>
+                                <td>20</td>
+                                <td>22</td>
+                                <td>24</td>
+                                <td>26</td>
+                            </tr>
+                            <tr>
+                                <td>Điểm đạt tối thiểu</td>
+                                <td>27</td>
+                                <td>32</td>
+                                <td>36</td>
+                                <td>41</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+
             <h4>Hãy chọn hạng giấy phép lái xe phù hợp với bạn</h4>
             <p>Nhấn vào nút <i style="color: brown;">"Bắt đầu luyện tập"</i> bên dưới để làm bài ngay</p>
 
