Update Image và galery

--- a/Galery.html
+++ b/Galery.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trình xem ảnh toàn màn hình</title>
-    <link rel="icon" type="image/x-icon" href="favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="image/favicon-16x16.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMt23cez/3paNdF+e1z5l5a7b6d5c5e5c5c5c5" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha384-1CmrxMRARb6aLqgBO7f2Q8z4c5e5c5c5c5c5c5c5c5c5c5c5c5c5c5" crossorigin="anonymous">
@@ -150,7 +150,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="logo.png" alt="Logo Taylaimoi.com" class="logo-img"></a>
+                    <img src="image/logo.png" alt="Logo Taylaimoi.com" class="logo-img"></a>
             </div>
             <div class="contact">
                 <span>📞 <a href="tel:0989465167">0989.465.167</a> - <strong>Thầy Tuấn - Tiếp nhận đăng ký hồ sơ</strong></span>
@@ -185,46 +185,193 @@
 
     <script>
         const images = [{
-            id: 1015,
-            alt: "Ảnh núi"
+            src: "image/Meo/Meo_ly_thuyet_ (1).jpg",
+            alt: "Ảnh 1"
         }, {
-            id: 1025,
-            alt: "Cánh đồng"
+            src: "image/Meo/Meo_ly_thuyet_ (2).jpg",
+            alt: "Ảnh 2"
         }, {
-            id: 1035,
-            alt: "Bãi biển"
+            src: "image/Meo/Meo_ly_thuyet_ (3).jpg",
+            alt: "Ảnh 3"
         }, {
-            id: 1045,
-            alt: "Thành phố"
+            src: "image/Meo/Meo_ly_thuyet_ (4).jpg",
+            alt: "Ảnh 4"
         }, {
-            id: 1055,
-            alt: "Hoàng hôn"
+            src: "image/Meo/Meo_ly_thuyet_ (5).jpg",
+            alt: "Ảnh 5"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (6).jpg",
+            alt: "Ảnh 6"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (7).jpg",
+            alt: "Ảnh 7"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (8).jpg",
+            alt: "Ảnh 8"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (9).jpg",
+            alt: "Ảnh 9"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (10).jpg",
+            alt: "Ảnh 10"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (11).jpg",
+            alt: "Ảnh 11"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (12).jpg",
+            alt: "Ảnh 12"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (13).jpg",
+            alt: "Ảnh 13"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (14).jpg",
+            alt: "Ảnh 14"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (15).jpg",
+            alt: "Ảnh 15"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (16).jpg",
+            alt: "Ảnh 16"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (17).jpg",
+            alt: "Ảnh 17"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (18).jpg",
+            alt: "Ảnh 18"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (19).jpg",
+            alt: "Ảnh 19"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (20).jpg",
+            alt: "Ảnh 20"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (21).jpg",
+            alt: "Ảnh 21"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (22).jpg",
+            alt: "Ảnh 22"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (23).jpg",
+            alt: "Ảnh 23"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (24).jpg",
+            alt: "Ảnh 24"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (25).jpg",
+            alt: "Ảnh 25"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (26).jpg",
+            alt: "Ảnh 26"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (27).jpg",
+            alt: "Ảnh 27"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (28).jpg",
+            alt: "Ảnh 28"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (29).jpg",
+            alt: "Ảnh 29"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (30).jpg",
+            alt: "Ảnh 30"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (31).jpg",
+            alt: "Ảnh 31"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (32).jpg",
+            alt: "Ảnh 32"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (33).jpg",
+            alt: "Ảnh 33"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (34).jpg",
+            alt: "Ảnh 34"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (35).jpg",
+            alt: "Ảnh 35"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (36).jpg",
+            alt: "Ảnh 36"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (37).jpg",
+            alt: "Ảnh 37"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (38).jpg",
+            alt: "Ảnh 38"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (39).jpg",
+            alt: "Ảnh 39"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (40).jpg",
+            alt: "Ảnh 40"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (41).jpg",
+            alt: "Ảnh 41"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (42).jpg",
+            alt: "Ảnh 42"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (43).jpg",
+            alt: "Ảnh 43"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (44).jpg",
+            alt: "Ảnh 44"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (45).jpg",
+            alt: "Ảnh 45"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (46).jpg",
+            alt: "Ảnh 46"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (47).jpg",
+            alt: "Ảnh 47"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (48).jpg",
+            alt: "Ảnh 48"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (49).jpg",
+            alt: "Ảnh 49"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (50).jpg",
+            alt: "Ảnh 50"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (51).jpg",
+            alt: "Ảnh 51"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (52).jpg",
+            alt: "Ảnh 52"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (53).jpg",
+            alt: "Ảnh 53"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (54).jpg",
+            alt: "Ảnh 54"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (55).jpg",
+            alt: "Ảnh 55"
+        }, {
+            src: "image/Meo/Meo_ly_thuyet_ (56).jpg",
+            alt: "Ảnh 56"
         }];
 
         const gallery = document.getElementById("lightgallery");
 
         images.forEach(({
-            id,
+            src,
             alt
         }) => {
-            const full = `https://picsum.photos/id/${id}/1200/800`;
-            const thumb = `https://picsum.photos/id/${id}/300/200`;
-
-            const link = document.createElement("a");
-            link.href = full;
-            link.setAttribute("data-lg-size", "1200-800");
-            link.innerHTML = `<img src="${thumb}" alt="${alt}" />`;
-
-            gallery.appendChild(link);
+            const a = document.createElement("a");
+            a.href = src;
+            a.setAttribute("data-lg-size", "1400-933");
+            a.innerHTML = `<img src="${src}" alt="${alt}" />`;
+            gallery.appendChild(a);
         });
 
         lightGallery(gallery, {
             plugins: [lgZoom, lgThumbnail, lgFullscreen],
             speed: 500,
-            hideBarsDelay: 2000,
+            download: true,
             fullScreen: true,
-            actualSize: true,
-            download: false
         });
     </script>
 </body>
