--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>600 Câu Hỏi Sát Hạch Lái Xe 2025</title>
-    <link rel="icon" type="image/x-icon" href="favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="image/favicon-16x16.png">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="logo.png" alt="Logo Taylaimoi.com" class="logo-img"></a>
+                    <img src="image/logo.png" alt="Logo Taylaimoi.com" class="logo-img"></a>
             </div>
             <div class="contact">
                 <span>📞 <a href="tel:0989465167">0989.465.167</a> - <strong>Thầy Tuấn - Tiếp nhận đăng ký hồ sơ</strong></span>
