Update index và galery

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <span>📞 <a href="tel:0989465167">0989.465.167</a> - <strong>Thầy Tuấn - Tiếp nhận đăng ký hồ sơ</strong></span>
                 <span>📞 <a href="tel:0988882266">09.8888.2266</a> - <strong>Hotline Taylaimoi.com</strong></span>
                 <span>📧 <a href="mailto:Taylaimoi226@gmail.com">Taylaimoi2266@gmail.com</a> </span>
-                <span>📍 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</span>
+                <span>📍 <b>Địa chỉ: 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</b></span>
             </div>
         </div>
     </nav>
@@ -101,11 +101,11 @@
 
             <div class="tab-group">
                 <div class="tab-list" role="tablist">
-                    <button role="tab" class="tab active" data-tab="tab-b">Bằng B</button>
-                    <button role="tab" class="tab" data-tab="tab-c1">Bằng C1</button>
-                    <button role="tab" class="tab" data-tab="tab-c">Bằng C</button>
-                    <button role="tab" class="tab" data-tab="tab-d">Bằng D1, D2, D</button>
-                    <button role="tab" class="tab" data-tab="tab-e">60 câu liệt</button>
+                    <button role="tab" class="tab active" data-tab="tab-b">Hạng Bằng B</button>
+                    <button role="tab" class="tab" data-tab="tab-c1">Hạng Bằng C1</button>
+                    <button role="tab" class="tab" data-tab="tab-c">Hạng Bằng C</button>
+                    <button role="tab" class="tab" data-tab="tab-d">Hạng Bằng D1, D2, D</button>
+                    <button role="tab" class="tab" data-tab="tab-e">60 câu liệt hay gặp</button>
                 </div>
                 <hr>
 
@@ -131,7 +131,7 @@
                 </div>
                 <div class="tab-panel" id="tab-e">
                     <button class="practice-btn" data-chapter="4">
-                <a href="#" target="_blank">➜ Bắt đầu luyện tập 60 câu liệt</a>
+                <a href="https://forms.gle/zDL2zzmmXBSscM9aA" target="_blank">➜ Bắt đầu luyện tập 60 câu liệt</a>
             </button>
                 </div>
         </section>
