--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                 <div class="tab-panel active" id="tab-b">
                     <button class="practice-btn" data-chapter="600">
-                <a href="#" target="_blank">➜ Bắt đầu luyện tập Hạng B</a>
+                <a href="https://forms.gle/NhmjxXcSHELDpjKb6" target="_blank">➜ Bắt đầu luyện tập Hạng B</a>
             </button>
                 </div>
                 <div class="tab-panel" id="tab-c1">
