--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
                     </table>
                 </div>
             </section>
+            <p><strong>Lưu ý!!!</strong> Mỗi câu hỏi được tính 1 điểm và mỗi đề thi có 01 câu hỏi nếu lựa chọn đáp án sai được tính là điểm liệt.</p>
+            <p>Mỗi câu có từ 02 đến 04 ý trả lời, thí sinh đọc đề bài và lựa chọn ra đáp án đúng nhất. Trường hợp bị điểm liệt trong bài thi thì không đạt nội dung sát hạch Lý Thuyết</p>
+            <br>
 
             <h4>Hãy chọn hạng giấy phép lái xe phù hợp với bạn</h4>
             <p>Nhấn vào nút <i style="color: brown;">"Bắt đầu luyện tập"</i> bên dưới để làm bài ngay</p>
@@ -116,7 +119,7 @@
                 </div>
                 <div class="tab-panel" id="tab-c1">
                     <button class="practice-btn" data-chapter="1">
-                <a href="#" target="_blank">➜ Bắt đầu luyện tập Hạng C1</a>
+                <a href="https://forms.gle/qrSL5qvKGHVcvTtL8" target="_blank">➜ Bắt đầu luyện tập Hạng C1</a>
             </button>
                 </div>
                 <div class="tab-panel" id="tab-c">
