--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
 
                 <div class="tab-panel active" id="tab-b">
                     <button class="practice-btn" data-chapter="600">
-                <a href="https://forms.gle/NhmjxXcSHELDpjKb6" target="_blank">➜ Bắt đầu luyện tập Hạng B</a>
+                <a href="examb.html" target="_blank">➜ Bắt đầu luyện tập Hạng B</a>
             </button>
                 </div>
                 <div class="tab-panel" id="tab-c1">
                     <button class="practice-btn" data-chapter="1">
-                <a href="https://forms.gle/qrSL5qvKGHVcvTtL8" target="_blank">➜ Bắt đầu luyện tập Hạng C1</a>
+                <a href="examc1.html" target="_blank">➜ Bắt đầu luyện tập Hạng C1</a>
             </button>
                 </div>
                 <div class="tab-panel" id="tab-c">
