--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     <img src="image/logo.png" alt="Logo Taylaimoi.com" class="logo-img"></a>
             </div>
             <div class="contact">
-                <span>📞 <a href="tel:0989465167">0989.465.167</a> - <strong>Thầy Tuấn - Tiếp nhận đăng ký hồ sơ</strong></span>
-                <span>📞 <a href="tel:0988882266">09.8888.2266</a> - <strong>Hotline Taylaimoi.com</strong></span>
-                <span>📧 <a href="mailto:Taylaimoi226@gmail.com">Taylaimoi2266@gmail.com</a> </span>
-                <span>📍 <b>Địa chỉ: 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</b></span>
+                <span>📞 Thầy Tuấn - Tiếp nhận đăng ký hồ sơ: <a href="tel:0989465167">0989.465.167</a></span>
+                <span>📞 Hotline Taylaimoi.com: <a href="tel:0988882266">09.8888.2266</a></span>
+                <span>📧 Mail CSKH: <a href="mailto:Taylaimoi226@gmail.com">Taylaimoi2266@gmail.com</a> </span>
+                <span>📍 Địa chỉ:<b> 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</b></span>
             </div>
         </div>
     </nav>
