--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <div class="box">
                 <p><strong>Mẹo thi lý thuyết</strong></p>
                 <p>Số câu: 600 | Phiên bản: Mới nhất</p>
-                <a href="Galery.html" target="_blank" class="btn-outline">➜ Tham khảo ngay</a>
+                <a href="Meo.html" target="_blank" class="btn-outline">➜ Tham khảo ngay</a>
             </div>
         </section>
     </main>
