--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>600 Câu Hỏi Sát Hạch Lái Xe 2025</title>
     <link rel="icon" type="image/x-icon" href="image/favicon-16x16.png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script> -->
 </head>
 
 <body>
@@ -26,10 +29,10 @@
                     <img src="image/logo.png" alt="Logo Taylaimoi.com" class="logo-img"></a>
             </div>
             <div class="contact">
-                <span>📞 Thầy Tuấn - Tiếp nhận đăng ký hồ sơ: <a href="tel:0989465167">0989.465.167</a></span>
-                <span>📞 Hotline Taylaimoi.com: <a href="tel:0988882266">09.8888.2266</a></span>
-                <span>📧 Mail CSKH: <a href="mailto:Taylaimoi226@gmail.com">Taylaimoi2266@gmail.com</a> </span>
-                <span>📍 Địa chỉ:<b> 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</b></span>
+                <span><i class="fa-solid fa-phone" style="color: #b30000;"></i> Thầy Tuấn - Tiếp nhận đăng ký hồ sơ: <a href="tel:0989465167">0989.465.167(Phone & Zalo)</a></span>
+                <span><i class="fa-solid fa-square-phone-flip"style="color: #b30000"></i> Hotline Taylaimoi.com: <a href="tel:0988882266">09.8888.2266</a></span>
+                <span><i class="fa-solid fa-house" style="color: #b30000"></i>  Thư CSKH: <a href="mailto:Taylaimoi226@gmail.com">Taylaimoi2266@gmail.com</a> </span>
+                <span><i class="fa-solid fa-envelope-open-text" style="color: #b30000"></i> Địa chỉ:<b> 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</b></span>
             </div>
         </div>
     </nav>
@@ -190,10 +193,6 @@
             </div>
         </section>
 
-
-
-
-
         <section class="other-section">
             <h3>DANH MỤC KHÁC</h3>
             <div class="box">
@@ -207,12 +206,25 @@
                 <a href="Meo.html" target="_blank" class="btn-outline">➜ Tham khảo ngay</a>
             </div>
         </section>
+
+        <section class="contact-section">
+            <a href="tel:0989465167" class="call-button" title="Gọi ngay"><i class="fas fa-phone"></i></a>
+        </section>
     </main>
 
     <footer>
         <div class="footer-content">
             <p><strong>www.Taylaimoi.com</strong></p>
             <p>Địa chỉ: 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</p>
+            <a href="https://www.facebook.com/taylaimoi2266" class="fb-button" target="_blank" title="Chat Facebook" style="color:white; padding: 10px; font-size: 14px;">
+                <img src="image/icons8_facebook.svg" style="width: 24px; height: 24px" alt="Chat Facebook"> Facebook Taylaimoi
+            </a>
+            <a href="https://zalo.me/0989465167" class="zalo-button" target="_blank" title="Chat Zalo" style="color:white ;padding: 10px; font-size: 14px;">
+                <img src="image/icons8_zalo.svg" style="width: 24px; height: 24px; " alt="Chat Zalo"> Zalo Tiếp nhân hồ sơ
+            </a>
+            <a href="https://www.tiktok.com/@kenhtaylaimoi.com" class="youtube-button" target="_blank" title="Xem Video" style="color:white ;padding: 10px; font-size: 14px;">
+                <img src="image/icons8_tiktok.svg" style="width: 24px; height: 24px;" alt="Xem Video">Tiktok Taylaimoi
+            </a>
             <p>Hotline: 09.8888.2266 | Email: Taylaimoi2266@gmail.com</p>
         </div>
     </footer>
