--- a/examb.html
+++ b/examb.html
@@ -41,6 +41,12 @@
             height: 800px;
             border: none;
         }
+        
+        @media (max-width: 768px) {
+            iframe {
+                height: auto;
+            }
+        }
     </style>
 </head>
 
