--- a/examb.html
+++ b/examb.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Đề thi hạng B - Thời gian làm bài 20 phút. Vui lòng không làm mới trang trong quá trình làm bài.">
     <title>Đề hạng B</title>
     <link rel="icon" type="image/x-icon" href="image/favicon-16x16.png">
     <style>
@@ -92,6 +95,12 @@
 
             totalTime--;
         }, 1000);
+
+        window.addEventListener('load', function() {
+            setTimeout(() => {
+                window.scrollTo(0, 1);
+            }, 100);
+        });
     </script>
 </body>
 
