--- a/Meo.html
+++ b/Meo.html
@@ -388,14 +388,14 @@
                 "image/ly-thuyet/23.jpg",
                 "image/ly-thuyet/24.jpg",
                 "image/ly-thuyet/25.jpg",
-                "image/ly-thuyet/26.jpg",
+                // "image/ly-thuyet/26.jpg",
                 "image/ly-thuyet/27.jpg",
                 "image/ly-thuyet/28.jpg",
                 "image/ly-thuyet/29.jpg",
                 "image/ly-thuyet/30.jpg",
                 "image/ly-thuyet/31.jpg",
                 "image/ly-thuyet/32.jpg",
-                "mage/ly-thuyet/33.jpg",
+                "image/ly-thuyet/33.jpg",
                 "image/ly-thuyet/34.jpg",
                 "image/ly-thuyet/35.jpg",
                 "image/ly-thuyet/36.jpg",
