--- a/index.html
+++ b/index.html
@@ -229,7 +229,10 @@
 
     <footer>
         <div class="footer-content">
-            <p><strong>www.Taylaimoi.com - Trực thuộc <a href="https://www.csgt.vn/" style="color: white;">CSGT Việt Nam</a></strong></p>
+            <p>© 2025 Taylaimoi.com - 120mophong.com.</p>
+            <p><strong>www.Taylaimoi.com</strong> - Cách lái mới, cho thời đại mới</p>
+            <i>“Phía trước tay lái là cuộc sống của bạn và mọi người, phía sau tay lái là gia đình của bạn”</i>
+            <p>Chúng tôi cung cấp dịch vụ dạy lái xe trên công nghệ giả lập và bổ túc tay lái mới, giúp bạn nâng cao kỹ năng lái xe một cách hiệu quả và an toàn cao nhất.</p>
             <p>Địa chỉ: 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</p>
             <a href="https://www.facebook.com/taylaimoi2266" class="fb-button" target="_blank" title="Chat Facebook" style="color:white; padding: 10px; font-size: 14px;">
                 <img src="image/icons8_facebook.svg" style="width: 24px; height: 24px" alt="Chat Facebook"> Facebook Taylaimoi
