--- a/index.html
+++ b/index.html
@@ -13,8 +13,30 @@
 </head>
 
 <body>
+    <section>
+        <div class="preloader">
+            <div class="loading">
+                <img src="image/logo.png" alt="Logo Taylaimoi.com" class="logo-img">
+                <p>Đang tải...</p>
+            </div>
+        </div>
+        <script>
+            // Ẩn preloader sau 3 giây
+            setTimeout(() => {
+                document.querySelector('.preloader').style.display = 'none';
+            }, 3000);
+        </script>
+        <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
+        <script>
+            // Kiểm tra xem preloader có tồn tại không
+            if (document.querySelector('.preloader')) {
+                document.querySelector('.preloader').style.display = 'none';
+            } <!-- Nếu không tồn tại, không làm gì cả -->
+        </script>
+    </section>
+
     <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
+    <script script type="text/javascript">
         var Tawk_API = Tawk_API || {},
             Tawk_LoadStart = new Date();
         (function() {
@@ -28,6 +50,8 @@
         })();
     </script>
     <!--End of Tawk.to Script-->
+
+
 
     <header class="top-bar modern-marquee">
         <div class="marquee-content">
@@ -244,47 +268,55 @@
         </div>
     </footer>
     <script>
-        // Dữ liệu mẫu cho từng chương
-        const questionBank = {
-            "600": Array.from({
-                length: 600
-            }, (_, i) => `Câu hỏi số ${i + 1}`),
-            "1": Array.from({
-                length: 180
-            }, (_, i) => `Chương 1 - Câu ${i + 1}`),
-            "2": Array.from({
-                length: 25
-            }, (_, i) => `Chương 2 - Câu ${i + 1}`),
-            "3": Array.from({
-                length: 58
-            }, (_, i) => `Chương 3 - Câu ${i + 1}`),
-            "4": Array.from({
-                length: 37
-            }, (_, i) => `Chương 4 - Câu ${i + 1}`),
-            "5": Array.from({
-                length: 185
-            }, (_, i) => `Chương 5 - Câu ${i + 1}`),
-            "6": Array.from({
-                length: 115
-            }, (_, i) => `Chương 6 - Câu ${i + 1}`),
-        };
+        document.querySelectorAll('.tab').forEach(tab => {
+            tab.addEventListener('click', function() {
+                // Loại bỏ active từ tất cả tab và panel
+                document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
+                document.querySelectorAll('.tab-panel').forEach(p => p.classList.remove('active'));
 
-        function getRandomSubset(arr, count = 35) {
-            return [...arr].sort(() => 0.5 - Math.random()).slice(0, count);
-        }
-
-        function renderQuestions(questions) {
-            const list = document.getElementById("question-list");
-            list.innerHTML = questions.map((q, i) => `<li><strong>${i + 1}.</strong> ${q}</li>`).join("");
-            document.getElementById("question-output").style.display = "block";
-        } // Xử lý Tab document.querySelectorAll('.tab').forEach(tab => { tab.addEventListener('click',
-        () => {
-            document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-            document.querySelectorAll('.tab-panel').forEach(panel => panel.classList.remove('active'));
-            tab.classList.add('active');
-            const panelId = tab.dataset.tab;
-            document.getElementById(panelId).classList.add('active');
+                // Thêm lại active cho tab được bấm
+                tab.classList.add('active');
+                const panelId = tab.dataset.tab;
+                const panel = document.getElementById(panelId);
+                if (panel) panel.classList.add('active');
+            });
         });
+    </script>
+    <script>
+        // Thêm sự kiện click cho các nút "Bắt đầu luyện tập"
+        document.querySelectorAll('.practice-btn').forEach(button => {
+            button.addEventListener('click', function() {
+                const chapter = this.dataset.chapter;
+                console.log(`Bạn đã chọn chương: ${chapter}`);
+                // Có thể thêm logic khác nếu cần
+            });
+        });
+    </script>
+    <script>
+        // Thêm sự kiện click cho các nút "Luyện tập ngay"
+        document.querySelectorAll('.btn-outline').forEach(button => {
+            button.addEventListener('click', function() {
+                const href = this.getAttribute('href');
+                console.log(`Bạn đã chọn luyện tập: ${href}`);
+                // Có thể thêm logic khác nếu cần
+            });
+        });
+    </script>
+    <script>
+        // Thêm sự kiện click cho nút gọi điện
+        document.querySelector('.call-button').addEventListener('click', function() {
+            console.log('Gọi ngay đến số hotline');
+            // Có thể thêm logic khác nếu cần
+        });
+    </script>
+    <script>
+        // Thêm sự kiện click cho các nút liên kết mạng xã hội
+        document.querySelectorAll('.fb-button, .zalo-button, .youtube-button').forEach(button => {
+            button.addEventListener('click', function() {
+                const href = this.getAttribute('href');
+                console.log(`Bạn đã chọn liên kết: ${href}`);
+                // Có thể thêm logic khác nếu cần
+            });
         });
     </script>
 
