--- a/Meo.html
+++ b/Meo.html
@@ -265,6 +265,11 @@
     </nav> -->
 
     <div class="container py-4">
+        <ul class="main-menu">
+            <li><a href="index.html"><i class="fa-solid fa-house"></i> Trang chủ</a></li>
+            <li><a href="Meo.html"><i class="fa-solid fa-lightbulb"></i> Mẹo thi</a></li>
+            <li><a href="#footer"><i class="fa-solid fa-phone"></i> Liên hệ</a></li>
+        </ul>
         <!-- <h2 class="text-center text-primary mb-4">Bộ ảnh ôn thi lý thuyết & thực hành</h2> -->
         <h2>Mẹo trả lời nhanh 600 câu lý thuyết thi sát hạch GPLX</h2>
         <div class="text-content">Hạng B, C1, C, D1, D2, D thi đỗ 100% </div>
@@ -299,7 +304,7 @@
             </div>
         </div>
     </div>
-    <footer>
+    <footer id="footer">
         <div class="footer-content">
             <p><strong>www.Taylaimoi.com</strong></p>
             <p>Địa chỉ: 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</p>
